Fix docs workflow (#91)

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: astral-sh/setup-uv@v3
         with:
           python-version: 3.x
-      - run: uv install zensical
+      - run: uv pip install zensical
       - run: zensical build --clean
       - uses: actions/upload-pages-artifact@v4
         with:
