Fix docs workflow (#92)

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           python-version: 3.x
       - run: uv pip install zensical
-      - run: zensical build --clean
+      - run: uv run zensical build --clean
       - uses: actions/upload-pages-artifact@v4
         with:
           path: site
