Use pip from docs workflow (#93)

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -17,11 +17,11 @@ jobs:
     steps:
       - uses: actions/configure-pages@v5
       - uses: actions/checkout@v5
-      - uses: astral-sh/setup-uv@v3
+      - uses: actions/setup-python@v5
         with:
           python-version: 3.x
-      - run: uv pip install zensical
-      - run: uv run zensical build --clean
+      - run: pip install zensical
+      - run: zensical build --clean
       - uses: actions/upload-pages-artifact@v4
         with:
           path: site
